# insighter

./: Dockerfile  bot.py  docker-compose.yml  insiht_bot_container.py  log_out_bot.py  pyproject.toml  settings.py
.github/workflows/: insighter_deploy_workflow.yml  prod_insighter_deploy_workflow.yml  stage_insighter_deploy_workflow.yml
DB/Mongo/: mongo_db.py  mongo_enteties.py
admin_bot/: Dockerfile  admin_insight_bot_container.py  bot.py  requirements.txt
admin_bot/handlers/: user_handler.py
admin_bot/keyboards/: inline_keyboards.py
analitics/: event_enteties.py  events.py  system_interface.py
analitics/mixpanel_system/: mixpanel_tracker.py
api/: gpt.py
api/media_recognition/: recognition.py
api/progress_bar/: command.py
config/: bot_configs.py  config_file.py
costume_exceptions/: ai_exceptions.py  config_loading.py  file_read_exceptions.py  format_exceptions.py  path_exceptions.py  system_exceptions.py
deploy/: docker-compose.yml
deploy/prod/: docker-compose.yml
deploy/stage/: docker-compose.yml
enteties/: pipline_data.py  queue_entity.py
handlers/: command_handler.py  docs_handlers.py  payment_handler.py  process_file_handler.py
insight_bot/: Dockerfile  bot.py  insiht_bot_container.py  requirements.txt
insight_bot/api/: gpt.py
insight_bot/config/: bot_configs.py
insight_bot/handlers/: command_handler.py  docs_handlers.py
insight_bot/keyboards/: inline_keyboards.py
insight_bot/lexicon/: LEXICON_RU.py
insight_bot/midleware/: attempts.py
insight_bot/services/: service_functions.py
insight_bot/states/: summary_from_audio.py
lexicon/: LEXICON_RU.py
logging_module/: log_config.py
main_process/: file_format_manager.py  file_manager.py  func_decorators.py  media_file_manager.py  post_ptocessing.py  pre_processing.py  process_pipline.py  system_detection.py  text_invoke.py
main_process/ChatGPT/: gpt_dispatcher.py  gpt_enteties.py  gpt_message.py  gpt_models_information.py  gpt_options.py  openai_chat_complain.py
main_process/Whisper/: openai_whisper_complain.py  whisper_dispatcher.py  whisper_information.py
main_process/youtube_option/: youtube_downloader.py
progress_bar/: app.py  progress_bar.py  requirements.txt
telegram_bot/costume_filters/: feedback.py  paye.py
telegram_bot/handlers/: command_handler.py  docs_handlers.py  payment_handler.py  process_file_handler.py
telegram_bot/keyboards/: calback_factories.py  inline_keyboards.py  main_menu.py
(+15 files in other folders)
